# vmath

./: .gitignore  CMakeLists.txt  LICENSE  README
docs/: doxygen.cfg.in
include/vmath/: lwcoord.h  vmath-constants.h  vmath-convert.h  vmath-cubemap.h  vmath-matvec.h  vmath-quaternions.h  vmath-types.h  vmath.h
src/: lwcoord.c  vmath-convert.c  vmath-cubemap.c  vmath-matvec.c  vmath-quaternions.c
tests/: CMakeLists.txt  math-test.c
vmath.xcodeproj/: project.pbxproj
